--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,13 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@videogular/ngx-videogular/fonts/videogular.css",
+              "node_modules/@videogular/ngx-videogular/fonts/videogular.css",
+              "node_modules/video.js/dist/video-js.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/video.js/dist/video.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -98,9 +101,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/video.js/dist/video-js.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/video.js/dist/video.min.js"
+            ]
           }
         }
       }
