--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
-    "@angular/common": "^10.1.0",
+    "@angular/common": "^12.2.8",
     "@angular/compiler": "~12.2.0",
-    "@angular/core": "^10.1.0",
+    "@angular/core": "^12.2.8",
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@apollo/client": "^3.7.15",
+    "@tensorflow/tfjs": "^4.5.0",
     "@videogular/ngx-videogular": "^4.1.0",
+    "@webgpu/types": "^0.1.32",
     "ajv": "^6.9.1",
+    "apollo-angular": "^5.0.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "ngx-videogular": "^10.1.0-0",
+    "react": "^18.2.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -29,6 +36,7 @@
     "@angular-devkit/build-angular": "~12.2.8",
     "@angular/cli": "^12.2.8",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/core-js": "^2.5.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -37,6 +45,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.3.5",
+    "video.js": "^7.15.4"
   }
 }
